change boton color to turquesa, change click on new tab on Card, remove Gessell button in Home

--- a/api/client/src/pages/SinglePage/singlePage.scss
+++ b/api/client/src/pages/SinglePage/singlePage.scss
@@ -126,7 +126,7 @@ $turquesa: rgb(137, 210, 220);
               transition: all 0.4s ease;
               cursor: pointer;
               &:hover {
-                background-color: white;
+                background-color: $amarillo;
                 color: black;
               }
             }
