fix icons size in singlePage

--- a/api/client/src/pages/SinglePage/singlePage.scss
+++ b/api/client/src/pages/SinglePage/singlePage.scss
@@ -168,7 +168,7 @@ $turquesa: rgb(137, 210, 220);
         padding: 0px;
       }
 
-      img {
+      .icon {
         width: 18px;
         height: 18px;
       }
