--- a/api/client/src/pages/SinglePage/singlePage.scss
+++ b/api/client/src/pages/SinglePage/singlePage.scss
@@ -226,6 +226,8 @@ $turquesa: rgb(137, 210, 220);
         padding: 5px 0;
         transition: all 0.4s ease;
         background-color: white;
+        gap: 10px;
+        font-size: 0.9rem;
 
         &:hover {
           background-color: $turquesa;
