--- a/api/client/src/pages/NewPost/newPost.scss
+++ b/api/client/src/pages/NewPost/newPost.scss
@@ -98,7 +98,7 @@ $turquesa: rgb(137, 210, 220);
         }
         .sendButton {
           margin: 10px auto;
-          width: 30%;
+          width: 40%;
           height: 35px;
           background-color: $turquesa;
           color: black;
@@ -121,6 +121,12 @@ $turquesa: rgb(137, 210, 220);
         font-size: 14px;
         text-align: center;
         color: red;
+      }
+      .backLink {
+        transition: all 0.5s ease;
+        &:hover {
+          color: $amarillo;
+        }
       }
     }
   }
