add image slider to homepage and new images

--- a/api/client/src/pages/HomePage/homePage.scss
+++ b/api/client/src/pages/HomePage/homePage.scss
@@ -129,10 +129,11 @@ $turquesa: rgb(137, 210, 220);
       display: none;
     }
 
-    img {
+    /* img {
       height: 100%;
-      position: absolute;
-      right: 0%;
-    }
+      //position: absolute;
+      //right: 0%;
+      //object-fit: cover;
+    } */
   }
 }
