--- a/api/client/src/pages/ResetPassword/resetPassword.scss
+++ b/api/client/src/pages/ResetPassword/resetPassword.scss
@@ -1,12 +1,13 @@
 $amarillo: rgb(238, 230, 13);
 $turquesa: rgb(137, 210, 220);
 
-.login {
+.resetPassword {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
+  //margin-top: 10px;
   height: 80vh;
 
   h1 {
@@ -15,8 +16,9 @@ $turquesa: rgb(137, 210, 220);
 
   .wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding: 40px 60px;
+    padding: 30px 50px;
     background-color: $turquesa;
     border-radius: 10px;
     font-size: 14px;
@@ -36,8 +38,8 @@ $turquesa: rgb(137, 210, 220);
         padding: 7px;
         margin-top: 10px;
         background-color: white;
-        border: 1px solid black;
-        border-radius: 0px;
+        border: 2px solid $amarillo;
+        border-radius: 5px;
         cursor: pointer;
         transition: all 0.4s ease;
 
@@ -46,26 +48,25 @@ $turquesa: rgb(137, 210, 220);
         }
       }
     }
-    .error {
-      color: red;
-      margin-top: 10px;
-      font-size: 14px;
-      text-align: center;
-    }
+  }
+
+  .error {
+    color: red;
+    margin-top: 10px;
+    font-size: 14px;
+    text-align: center;
+    text-wrap: wrap;
+  }
+  .success {
+    color: green;
+    margin-top: 10px;
+    font-size: 14px;
+    text-align: center;
+    text-wrap: wrap;
   }
 
   p {
-    font-size: 14px;
-    font-weight: bold;
-    text-align: center;
-  }
-
-  span {
     font-size: 13px;
-
-    a {
-      color: $turquesa;
-      font-weight: bold;
-    }
+    text-align: center;
   }
 }
