--- a/api/client/src/components/contactForm/contactForm.scss
+++ b/api/client/src/components/contactForm/contactForm.scss
@@ -50,7 +50,7 @@ input::-webkit-inner-spin-button {
       }
     }
 
-    button {
+    .boton {
       padding: 7px;
       border: 1px solid black;
       background-color: $turquesa;
@@ -63,6 +63,21 @@ input::-webkit-inner-spin-button {
 
       &:hover {
         background-color: $amarillo;
+      }
+    }
+
+    .whatsapp {
+      font-size: 0.75rem;
+      text-align: center;
+      background-color: #25d366;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        height: 17px;
+        width: 17px;
+        margin-right: 5px;
       }
     }
   }
